Code, Scenario, ReadMe file update

--- a/src/test/resources/myReports/cucumber-html-reports/overview-steps.html
+++ b/src/test/resources/myReports/cucumber-html-reports/overview-steps.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Pagination Helper Unit Test Results</td>
               <td>1</td>
-            <td>09 Sep 2021, 22:06</td>
+            <td>10 Sep 2021, 14:38</td>
     </tr>
   </tbody>
 </table>
@@ -114,38 +114,38 @@ $(document).ready(function() {
 
         <tbody>
                       <tr>
-              <td class="location">assessment.stepDef.PaginationSteps.getPageTheItemCount()</td>
-              <td>1</td>
-              <td class="duration" data-value="853000">000ms</td>
-              <td class="duration" data-value="853000">000ms</td>
+              <td class="location">assessment.stepDef.PaginationSteps.getTheAndCompareThe(io.cucumber.datatable.DataTable)</td>
+              <td>2</td>
+              <td class="duration" data-value="2538000">002ms</td>
+              <td class="duration" data-value="1269000">001ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
-              <td class="location">assessment.stepDef.PaginationSteps.getTheItemCount()</td>
-              <td>1</td>
-              <td class="duration" data-value="5637000">005ms</td>
-              <td class="duration" data-value="5637000">005ms</td>
+              <td class="location">assessment.stepDef.PaginationSteps.getTheAndCompareWith(io.cucumber.datatable.DataTable)</td>
+              <td>2</td>
+              <td class="duration" data-value="2687000">002ms</td>
+              <td class="duration" data-value="1343500">001ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
-              <td class="location">assessment.stepDef.PaginationSteps.getThePageCount()</td>
-              <td>1</td>
-              <td class="duration" data-value="682000">000ms</td>
-              <td class="duration" data-value="682000">000ms</td>
+              <td class="location">assessment.stepDef.PaginationSteps.getTheItemCountAndCompareWithExpected(java.lang.String)</td>
+              <td>2</td>
+              <td class="duration" data-value="5021000">005ms</td>
+              <td class="duration" data-value="2510500">002ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
-              <td class="location">assessment.stepDef.PaginationSteps.getThePageIndex()</td>
-              <td>1</td>
-              <td class="duration" data-value="883000">000ms</td>
-              <td class="duration" data-value="883000">000ms</td>
+              <td class="location">assessment.stepDef.PaginationSteps.getThePageCountAndCompareWithExpected(java.lang.String)</td>
+              <td>2</td>
+              <td class="duration" data-value="1073000">001ms</td>
+              <td class="duration" data-value="536500">000ms</td>
               <td class="passed">100.00%</td>
             </tr>
                       <tr>
-              <td class="location">assessment.stepDef.PaginationSteps.useTheListOfContentPaginationAndNumberOfItemEachPage(io.cucumber.datatable.DataTable)</td>
-              <td>1</td>
-              <td class="duration" data-value="58712000">058ms</td>
-              <td class="duration" data-value="58712000">058ms</td>
+              <td class="location">assessment.stepDef.PaginationSteps.useThePaginationAnd(java.lang.String,java.lang.String)</td>
+              <td>2</td>
+              <td class="duration" data-value="49444000">049ms</td>
+              <td class="duration" data-value="24722000">024ms</td>
               <td class="passed">100.00%</td>
             </tr>
                   </tbody>
@@ -153,9 +153,9 @@ $(document).ready(function() {
         <tfoot class="total">
           <tr>
             <td>5</td>
-            <td>5</td>
-            <td class="duration">066ms</td>
-            <td class="duration">013ms</td>
+            <td>10</td>
+            <td class="duration">060ms</td>
+            <td class="duration">006ms</td>
             <td>Totals</td>
           </tr>
         </tfoot>
